--- a/styles/travel.css
+++ b/styles/travel.css
@@ -180,7 +180,9 @@ li .rare{
     margin-left: 42px;
 }
 /* country section starts here */
-
+.country-container{
+    height: 150px;
+}
 .country-title{
     width: 478px;
     height: 70px;
@@ -199,4 +201,77 @@ li .rare{
     text-align: center;
     font-size: 16px;
     font-weight: 400;
+}
+
+.image-grid-container{
+    width: 1170px;
+    height: 950px;
+    margin: 0 auto;
+}
+.image-grid-content{
+    display: grid;
+    grid-template-columns:  repeat(4, 1fr);
+   
+    grid-auto-rows: 200px;
+    gap: 10px;
+}
+.box{
+    background-size: cover;
+   
+    color: white;
+    font-size: 28px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: gray;
+    background-blend-mode: hard-light;
+    
+}
+#box-1{
+    grid-column: span 2;
+    border-radius: 16px;
+    height: 300px;
+    
+}
+
+#box-2{
+    grid-column: span 2;
+    border-radius: 16px;
+    height: 300px;
+}
+
+#box-3{
+    
+    border-radius: 16px;
+    grid-column: span 1;
+    height: 286px;
+    margin-top: 100px;
+}
+
+#box-4{
+    border-radius: 16px;
+    grid-column: span 2;
+    height: 286px;
+    margin-top: 100px;
+}
+#box-5{
+    width: 290px;
+    border-radius: 16px;
+    height: 286px;
+    margin-top: 100px;
+}
+
+#box-6{
+    grid-column: span 2;
+    border-radius: 16px;
+    height: 300px;
+    margin-top: 186px;
+    
+}
+#box-7{
+    grid-column: span 2;
+    border-radius: 16px;
+    height: 300px;
+    margin-top: 186px;
+    
 }
