--- a/styles/travel.css
+++ b/styles/travel.css
@@ -205,7 +205,7 @@ li .rare{
 
 .image-grid-container{
     width: 1170px;
-    height: 950px;
+    height: 970px;
     margin: 0 auto;
 }
 .image-grid-content{
@@ -275,3 +275,111 @@ li .rare{
     margin-top: 186px;
     
 }
+
+/* choose container starts here */
+.choose-container{
+    width: 1170px;
+    height: 900px;
+    margin: 0 auto;
+}
+.choose-info{
+    height: 200px;
+}
+.choose-title{
+    width: 307px;
+    height: 50px;
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin: 0 auto;
+}
+
+.choose-desc{
+    width: 643px;
+    height: 72px;
+    margin: 0 auto;
+    color: rgba(19, 19, 24, 0.70);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.choose-second-section{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.left-choose-content{
+    width: 573px;
+    height: 284px;
+    border-radius: 16px;
+    border: 1px solid rgba(251, 181, 99, 0.20);
+    background: rgba(251, 181, 99, 0.05);
+}
+.right-choose-content{
+    width: 573px;
+    height: 284px;
+    border-radius: 16px;
+    border: 1px solid rgba(41, 206, 246, 0.20);
+    background: rgba(41, 206, 246, 0.05);
+}
+.choose-svg{
+    width: 64px;
+    height: 64px;
+    padding-top: 32px;
+    padding-left: 32px;
+}
+.choose-title-one{
+    width: 221px;
+    height: 30px;
+    color: #131318;
+    text-align: center;
+    padding-left: 32px;
+    font-size: 24px;
+    font-weight: 800;
+    
+}
+.choose-description{
+    width: 486px;
+    padding-left: 32px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+}
+.choose-title-two{
+    width: 233px;
+    height: 30px;
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    padding-left: 32px;
+}
+.third-section{
+    margin-top: 30px;
+}
+.choose-third-content{
+    border-radius: 16px;
+    border: 1px solid rgba(233, 68, 68, 0.20);
+    background: rgba(233, 68, 68, 0.05);
+    width: 573px;
+    height: 284px;
+    margin: 0 auto;
+}
+.choose-third-title{
+    width: 246px;
+    height: 30px;
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    padding-left: 32px;
+}
+.choose-third-desc{
+    width: 486px;
+    height: 78px;
+    color: #5A5A5D;
+    font-size: 16px; 
+    font-weight: 400;
+    padding-left: 32px;
+}
+
