--- a/styles/travel.css
+++ b/styles/travel.css
@@ -383,3 +383,56 @@ li .rare{
     padding-left: 32px;
 }
 
+/* deals and discount section starts here */
+.deals-container{
+    width: 1170px;
+    margin: 0 auto;
+}
+.deals-content{
+    width: 1170px;
+    margin: 0 auto;
+    text-align: center;
+}
+.deals-title{
+    width: 351px;
+    height: 50px;
+    color: #131318;
+    text-align: center;
+    font-size: 40px;
+    font-weight: 800;
+    margin: 0 auto;
+}
+.deals-img-one{
+    background-image: url(../Images/Group\ 39.png);
+    width: 1170px;
+    height: 500px;
+    background-size: cover;
+    margin-top: 40px;
+}
+.deals-img-two{
+    background-image: url(../Images/Group\ 40.png);
+    width: 1170px;
+    height: 500px;
+    background-size: cover;
+    margin-top: 40px;
+}
+.deals-img-three{
+    background-image: url(../Images/Group\ 39.png);
+    width: 1170px;
+    height: 500px;
+    background-size: cover;
+    margin-top: 40px;
+}
+.deals-button{
+    width: 210px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    margin-top: 30px;
+    border: 0;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+    margin-left: 465px;
+}
