--- a/styles/travel.css
+++ b/styles/travel.css
@@ -436,3 +436,65 @@ li .rare{
     font-weight: 800;
     margin-left: 465px;
 }
+.place-image{
+    background-image: url(../Images/Group\ 40089.png);
+    width: 610px;
+    height: 424px;
+    background-size: cover;
+}
+/* place section starts here */
+.place-container{
+    width: 1170px;
+    margin: 0 auto;
+    margin-top: 60px;
+}
+.a-simple{
+    display: flex;
+    justify-content: space-between;
+}
+.place-title{
+    width: 448px;
+    height: 120px;
+    color: #131318;
+    font-size: 40px;
+    font-weight: 800;
+}
+.place-desc{
+    width: 532px;
+    height: 52px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+}
+.place-list{
+    width: 518px;
+    height: 58px;
+    color: #131318;
+    font-size: 16px;
+    font-weight: 700;
+}
+.place-button{
+    width: 174px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    border: 0;
+    color: #fff;
+}
+.place-image{
+    width: 610px;
+    height: 424px;
+    border-radius: 16px;
+    position: relative;
+}
+.place-img-title{
+    width: 250px;
+    height: 72px;
+    color: #FFF;
+    font-size: 14px;
+    text-align: center;
+    position: absolute;
+    left: 170px;
+    top: 170px;
+    
+}
