--- a/styles/travel.css
+++ b/styles/travel.css
@@ -498,3 +498,110 @@ li .rare{
     top: 170px;
     
 }
+
+/* form section starts here */
+
+.form-container-two{
+    width: 1170px;
+    padding-top: 100px;
+    margin: 0 auto;
+}
+
+/* form section starts here */
+
+.form-container{
+    width: 1170px;
+}
+
+.form-first{
+    display: flex;
+    justify-content: space-between;
+    
+}
+.travel{
+    background-image: url(../Images/Rectangle\ 8\ \(1\).png);
+    width: 672px;
+    height: 422px;
+    background-size: cover;
+}
+.form-title{
+    width: 126px;
+    height: 30px;
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    padding-left: 40px;
+}
+.form-desc{
+    width: 350px;
+    height: 52px;
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    padding-left: 40px;
+}
+.hr{
+    width: 397px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10);
+    margin-left: 40px;
+}
+.input-name{
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+    border: 0;
+    font-size: 16px;
+    margin-left: 40px;
+    
+}
+.input-name, input[type="text"]{
+    padding-left: 15px;
+    color: #fff;
+}
+.form-button{
+    width: 410px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    border: 0;
+    color: #fff;
+    margin-left: 40px;
+}
+.form{
+    border: 1px solid #FF5400;
+    width: 474px;
+    height: 422px;
+    border-radius: 16px;
+}
+.travel{
+    position: relative;
+}
+.travel-button{
+    position: absolute;
+    width: 324px;
+    height: 120px;
+    transform: rotate(-19.628deg);
+    border-radius: 16px;
+    background: #FF5400;
+    left: 340px;
+    top: 250px;
+    border: 0;
+}
+.travel-title-last{
+    width: 119px;
+    height: 30px;
+    text-align: center;
+    margin: 0 auto;
+    /* margin-top: 30px; */
+    color: #fff;
+    font-size: 24px;
+}
+.travel-price{
+    width: 244px;
+    height: 40px;
+    margin: 0 auto;
+    color: #fff;
+    font-size: 32px;
+}
