--- a/styles/travel.css
+++ b/styles/travel.css
@@ -857,7 +857,7 @@ li .rare{
         width: 100%;
         height: 100%;
         position: relative;
-        
+        display: none;
     }
     .banner-img{
        
