--- a/styles/travel.css
+++ b/styles/travel.css
@@ -871,7 +871,7 @@ li .rare{
         margin: 0 auto;
         right: 300px;
         font-size: 22px;
-        
+        display: none;
     }
     .banner-info{
         position: absolute;
@@ -881,6 +881,7 @@ li .rare{
         right: 250px;
         top: 30px;
         margin-top: 30px;
+        display: none;
     }
     .button-container{
         width: 400px;
@@ -889,7 +890,7 @@ li .rare{
         right: 300px;
         top: 150px;
         margin: 0 auto;
-       
+       display: none;
     }
     .button{
         position: absolute;
